# ai-agent-cli

./: Cargo.toml  README.md  agent-7994826732683882543.json
agent-cli-test/: Cargo.toml
agent-cli-test/src/: main.rs
src/: lib.rs
tests/: agent-11465575948940652613.json  agent-12091093614736718718.json  agent-14210979703498160459.json  agent-14911744710090276764.json  agent-18002934717132371111.json
