[package]
name = "agent-cli"
version = "0.1.1"
description = "Agent AI command line"
repository = "https://github.com/AI-Robotic-Labs/ai-agent-cli"
documentation = "https://docs.rs/agent_cli"
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.1"

[[bin]]
name = "agent-cli"
path = "src/lib.rs"
